--- a/report/main.tex
+++ b/report/main.tex
@@ -38,7 +38,7 @@
       Trivial,Qed,Intros,Symmetry,Simpl,Rewrite,Apply,Elim,Assumption,%
       Left,Cut,Case,Auto,Unfold,Exact,Right,Hypothesis,Pattern,Destruct,%
       Constructor,Defined,Fix,Record,Print,Proof,Induction,Hint,Hints,Exists,
-      let,in,Parameter,Split,Red,Reflexivity,Transitivity,if,then,else,Opaque,%
+      let,in,Parameter,Parameters,Split,Red,Reflexivity,Transitivity,if,then,else,Opaque,%
       Transparent,Inversion,Absurd,Generalize,Mutual,Cases,of,end,Analyze,%
       AutoRewrite,Functional,Scheme,params,Refine,using,Discriminate,Try,%
       Require,Load,Import,Scope,Set,Open,Section,End,match,with,Ltac,%
@@ -48,13 +48,13 @@
    basicstyle=\normalfont\footnotesize\tt,%
    sensitive, %
    tabsize=2,%
-   escapechar=`,%
+   %escapechar=`,%
    morecomment=[n]{(*}{*)},%
    morestring=[d]",%
-   literate={=>}{{$\Rightarrow$}}1 {>->}{{$\rightarrowtail$}}2{->}{{$\to$}}1
-   {\/\\}{{$\wedge$}}1
-   {|-}{{$\vdash$}}1
-   {\\\/}{{$\vee$}}1
+   literate={=>}{{$\Rightarrow$}}2 {>->}{{$\rightarrowtail$}}3{<->}{{$\longleftrightarrow$}}3{->}{{$\to$}}2
+   {\/\\}{{$\wedge$}}2
+   {|-}{{$\vdash$}}2
+   {\\\/}{{$\vee$}}2
    {~}{{$\sim$}}1
    %{<>}{{$\neq$}}1 indeed... no.
   }[keywords,comments,strings]%
