Added some related work

--- a/report/main.tex
+++ b/report/main.tex
@@ -297,6 +297,10 @@ Theorem n_consistency_consensus '{CBC_protocol_eq} :
 \newblock Refinement and Verification of CBC Casper. 
 \newblock {\em Cryptology ePrint Archive}, Report 2019/415, 2019.
 
+\bibitem{Nakamura-github} Ryuya Nakamura, Takayuki Jimba, Dominik Harz.
+\newblock Proofs of properties of CBC Casper.
+\newblock https://github.com/LayerXcom/cbc-casper-proof
+
 \bibitem{CBCfull} Vlad Zamfir, Nate Rush, Aditya Asgaonkar, Georgios Piliouras.
 \newblock Introducing the ``Minimal CBC Casper'' Family of Consensus Protocols. 
 \newblock 2019. 
